--- a/package.json
+++ b/package.json
@@ -45,6 +45,8 @@
         "prettier": "^2.2.1",
         "rimraf": "^3.0.2",
         "sass-loader": "^8.0.2",
+        "shipit-cli": "^5.3.0",
+        "shipit-deploy": "^5.3.0",
         "style-loader": "^1.1.3",
         "ts-loader": "^6.2.2",
         "typescript": "~3.8.3",
