--- a/src/manifest/manifest-chrome.json
+++ b/src/manifest/manifest-chrome.json
@@ -11,6 +11,7 @@
     "background": {
         "scripts": [
             "app/vendor.js",
+            "app/background.bundle.js",
             "app/background.js"
         ]
     },
